<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/brainstorm"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grown_your_ideas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        app:layout_goneMarginTop="20dp"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:src="@drawable/logo"
        android:contentDescription="@string/todo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextRegisterEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/your_email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextRegisterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextRegisterEmailAddress">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/editTextTextRegisterPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextRegisterPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/messageLabelRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/enter_your_username_and_click_on_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextUsername" />

    <Button
        style="?attr/materialButtonOutlinedStyle"
        android:shadowRadius="7"
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:enabled="true"
        android:text="@string/register"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextUsername"
         />

    <Button
        style="?attr/materialButtonOutlinedStyle"
        android:shadowRadius="7"
        android:id="@+id/buttonRegisterDone"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:alpha="0"
        android:text="@string/done"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextUsername"
        app:layout_constraintTop_toTopOf="@+id/editTextTextUsername" />

    <Button
        style="?attr/materialButtonOutlinedStyle"
        android:shadowRadius="7"
        android:id="@+id/buttonGoToLogin"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/go_to_login_page"
        android:alpha="0"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageLabelRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>